# aimz-api-documentation

./: .gitignore  README.md
src/: .env  pyproject.toml
src/aimz/: GetAccounts.py  GetChangeOrders.py  GetCompanies.py  GetContracts.py  GetInvoiceImages.py  GetInvoices.py  GetProjects.py
src/aimz/tools/: AimzDocumentStoreTools.py  AimzGraphqlTools.py
src/general/: AssignDocumentUserRole.py  AuthTools.py  Tools.py
