[tool.poetry]
name = "tools"
version = "0.1.0"
description = "Aimz Api Scripts"
authors = ["Hans Erik Heggem <hanserik@aimz.no>"]
packages = [
    {include = "general"}, 
    {include = "aimz"}, 
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
requests = "2.28.1"
python-graphql-client = "0.4.3"
DockerBuildManagement = "0.0.91"
pydantic = "^2.9.2"

[tool.isort]
line_length = 999
multi_line_output = 5

[tool.ruff]
line-length = 160
ignore = [
    "E501", # Line length
]
exclude = ["DocumentStore/config.py"]

[tool.ruff.per-file-ignores]
"config.py" = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
